fix: update font properties for wp-caption text in general styles for improved readability

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -166,6 +166,10 @@ a:active {
 
 .wp-caption .wp-caption-text {
 	margin: 0.8075em 0;
+	font-size: 14px;
+	font-style: italic;
+	font-weight: 500;
+	line-height: 1.3;
 }
 
 .wp-caption-text {
